# hc-adk

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  PHOTO_FEATURE_DEPLOY.md  README.md  REPLIT_CONTEXT.md  backlog.md  pyproject.toml
demo_data/alex_15/: onboarding.json  profile.json  tweets.txt
docs/pitch/: README.md  build_pdf.py  pitch.html
integrations/: livekit-integration.md  mcp-tool-schemas.md  voice-worker-contract.md
jutra/: __init__.py  cli.py  logging_setup.py  settings.py
jutra/agents/: __init__.py  extraction.py  future_self.py  onboarding.py  style.py
jutra/agents/prompts/: __init__.py  extraction.md  future_self.md  onboarding.md  style.md
jutra/api/: __init__.py  auth.py  auth_routes.py  main.py  photo_routes.py  routes.py  schemas.py  voice.py
jutra/infra/: __init__.py  firestore.py  gcs.py  vertex.py
jutra/ingestion/: __init__.py  pipeline.py
jutra/ingestion/parsers/: __init__.py  instagram_json.py  twitter_archive.py
jutra/mcp/: __init__.py  server.py
jutra/memory/: __init__.py  models.py  save_turn.py  store.py
jutra/personas/: __init__.py  erikson.py  gender.py  horizons.py  maturity.py  ocean.py  riasec.py
jutra/safety/: __init__.py  crisis.py  disclosure.py  pii.py  wrap_turn.py
jutra/services/: __init__.py  auth_local.py  chat.py  ingestion.py  personas.py  photo_aging.py  profile_gaps.py  session_close.py
scripts/: deploy.sh  mcp_smoke.py  rollback.sh  seed.py  setup-photo-feature.sh  wipe_all_users.py
tests/: _fakestore.py  test_agents.py  test_auth_local.py  test_chat_stream.py  test_gender.py  test_identity_upgrade.py  test_ingestion.py  test_memory.py  test_personas.py  test_profile_gaps.py  test_safety.py  test_save_turn.py  test_smoke.py  test_style.py
